tests/basic/pos/Inc04.hs
module Inc04 where

{-@ inc :: Nat -> Nat @-} 
inc :: Int -> Int 
inc x = x + 1
